# VoteSecure

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
implementations/rust/workspace/cryptography/fuzz/: Cargo.toml
implementations/rust/workspace/cryptography/fuzz/fuzz_targets/: deser_u32.rs  deser_u64.rs  encode_bytes_ristretto.rs  encode_scalar_bytes_ristretto.rs
implementations/rust/workspace/protocol/: Cargo.toml  DEVELOPER.md
implementations/rust/workspace/protocol/src/: auth_service.rs  bulletins.rs  crypto.rs  cryptography.rs  elections.rs  lib.rs  messages.rs
implementations/rust/workspace/protocol/src/participants/: integration_tests.rs  integration_tests_basic.rs  mod.rs
implementations/rust/workspace/protocol/src/participants/ballot_check_application/: top_level_actor.rs
implementations/rust/workspace/protocol/src/participants/digital_ballot_box/: bulletin_board.rs  mod.rs  storage.rs  top_level_actor.rs
implementations/rust/workspace/protocol/src/participants/election_admin_server/: mod.rs  top_level_actor.rs
implementations/rust/workspace/protocol/src/participants/voting_application/: mod.rs  top_level_actor.rs
implementations/rust/workspace/protocol/src/trustee_protocols/: integration_tests.rs  integration_tests_basic.rs  mod.rs  trustee_cryptography.rs  trustee_messages.rs
implementations/rust/workspace/protocol/src/trustee_protocols/trustee_administration_server/: mod.rs  top_level_actor.rs
implementations/rust/workspace/protocol/src/trustee_protocols/trustee_application/: mod.rs  top_level_actor.rs
(+138 files in other folders)
