[package]
name = "votesecure-protocol-library"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto = { path = "../crypto" }
vser_derive = { path = "../crypto/macros/vser_derive" }
# generic-array version needs to be pinned, newer versions break SW supply chain checks
generic-array = "=0.14.7"
sha3 = "0.10"
hex = "0.4"
